--- a/latex/main.tex
+++ b/latex/main.tex
@@ -18,6 +18,7 @@
 \usepackage[numbers]{natbib}
 \usepackage{parskip}
 \usepackage{subcaption}
+\usepackage[most]{tcolorbox}
 \usepackage{xcolor}
 
 \usepackage[vcentering,dvips]{geometry}
