--- a/latex/main.tex
+++ b/latex/main.tex
@@ -8,13 +8,14 @@
 \usepackage{amsthm}
 \usepackage[english]{babel}
 \usepackage{booktabs}
-\usepackage[labelfont=bf]{caption}
+\usepackage[labelfont=bf, font=small]{caption}
 \usepackage{chngcntr}
 \usepackage{color, colortbl}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
+\usepackage{microtype}
 \usepackage[numbers]{natbib}
 \usepackage{parskip}
 \usepackage{subcaption}
