--- a/latex/title.tex
+++ b/latex/title.tex
@@ -9,5 +9,5 @@
     this, the work moves closer to the research frontier by explaining
     automatic differentiation and its use with weighted automata. The last
     section presents several extended examples to gain deeper familiarity with
-    weighted automata, their operations, and applications to machine-learning.
+    weighted automata, their operations, and their use in machine learning.
 \end{abstract}
