differentiation with automata

--- a/latex/differentiation_with_automata.tex
+++ b/latex/differentiation_with_automata.tex
@@ -1,5 +1,5 @@
-\section{Differentiable Automata}
-\label{sec:differentiable_automata}
+\section{Differentiation with Automata}
+\label{sec:differentiation_with_automata}
 
 Modern deep learning relies on the fact that core functions are differentiable
 (or sub-differentiable). This is important to any type of gradient-based
