--- a/latex/main.tex
+++ b/latex/main.tex
@@ -79,8 +79,9 @@
 \include{acceptors_and_transducers}
 \include{basic_operations}
 \include{advanced_operations}
-\include{differentiable_automata}
+\include{differentiation_with_automata}
 \include{extended_examples}
+\include{acknowledge}
 \include{bibliography}
 
 \end{document}
