--- a/notebooks/differentiation_with_automata.ipynb
+++ b/notebooks/differentiation_with_automata.ipynb
@@ -5,7 +5,7 @@
    "id": "17dd4834",
    "metadata": {},
    "source": [
-    "# Differentiable Automata"
+    "# Differentiation with Automata"
    ]
   },
   {
